<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WalletFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_mbg"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:id="@+id/hello_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="25dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="Hello, Mobile!"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/ETH_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ETH 1000"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_40font_mdp" />

                <TextView
                    android:id="@+id/balance_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:text="Your balance"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/layout_horizontal"
                android:layout_marginVertical="@dimen/layout_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/_85mdp"
                        android:layout_margin="@dimen/_5mdp"
                        app:cardElevation="@dimen/_3mdp"
                        app:cardCornerRadius="15dp"
                        android:backgroundTint="@color/blue_mbg"
                        app:cardPreventCornerOverlap="true">

                        <LinearLayout
                            android:id="@+id/btn_deposit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@null"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="left"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout_balance">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="60dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:contentDescription="Deposit"
                                android:scaleType="center"
                                android:tint="@color/white"
                                android:src="@drawable/ic_deposit_24" />

                            <TextView
                                android:id="@+id/deposit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="15dp"
                                android:layout_weight="1"
                                android:lines="2"
                                android:text="@string/deposit_money"
                                android:textColor="#FFFFFF"
                                android:textSize="@dimen/text_normal" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_withdraw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/_85mdp"
                        android:layout_margin="@dimen/_5mdp"
                        app:cardElevation="@dimen/_3mdp"
                        app:cardCornerRadius="15dp"
                        android:backgroundTint="@color/white"
                        app:cardPreventCornerOverlap="true">

                        <LinearLayout
                            android:id="@+id/btn_withdraw"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@null"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="left"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout_balance">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="60dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:contentDescription="Deposit"
                                android:scaleType="center"
                                android:tint="@color/blue_mbg"
                                android:src="@drawable/ic_deposit_24" />

                            <TextView
                                android:id="@+id/withdraw_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="15dp"
                                android:layout_weight="1"
                                android:lines="2"
                                android:text="@string/withdraw_money"
                                android:textColor="@color/blue_mbg"
                                android:textSize="@dimen/text_normal" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/lb_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5mdp"
                            android:text="@string/activity"
                            android:textColor="#000000"
                            android:textSize="@dimen/text_large"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:id="@+id/txtv_view_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5mdp"
                            android:text="@string/view_all"
                            android:textColor="#0A5DAE"
                            android:textSize="@dimen/text_normal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_activities_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/_5mdp"></androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>