<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="150dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/oval_shape"
                android:backgroundTint="@color/gray_oval"
                android:contentDescription="Avatar"
                android:scaleType="center"
                android:src="@drawable/ic_person_outline_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_avatar"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/blue_oval_shape"
                android:contentDescription="Choose a picture"
                android:src="@drawable/ic_camera_24"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/label_personal_inf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:text="@string/personal_information"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <ImageButton
                android:id="@+id/btn_edit_per_inf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFFFF"
                android:contentDescription="Edit"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toEndOf="@+id/label_personal_inf"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_24" >
            </ImageButton>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_edit_per_inf">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/label_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="Name"
                        android:textColor="#000000" />

                    <ViewSwitcher
                        android:id="@+id/switch_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <TextView
                            android:id="@+id/text_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Mobile"
                            android:textColor="#000000" />

                        <EditText
                            android:id="@+id/edittext_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:paddingTop="0dp"
                            android:text="Name"
                            android:textSize="14dp" />

                    </ViewSwitcher>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/label_username"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/username"
                        android:textColor="#050505" />

                    <ViewSwitcher
                        android:id="@+id/switch_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <TextView
                            android:id="@+id/text_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Mobile"
                            android:textColor="#000000" />

                        <EditText
                            android:id="@+id/edittext_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:paddingTop="0dp"
                            android:text="Name"
                            android:textSize="14dp" />

                    </ViewSwitcher>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/label_email"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="#0B0B0B" />

                    <ViewSwitcher
                        android:id="@+id/switch_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autoLink="email"
                            android:text="abc@gmail.com"
                            android:textColor="#000000"
                            android:textColorLink="@color/black" />

                        <EditText
                            android:id="@+id/edittext_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:paddingTop="0dp"
                            android:text="abc@gmail.com"
                            android:textSize="14dp" />

                    </ViewSwitcher>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/label_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/phone"
                        android:textColor="#000000" />

                    <ViewSwitcher
                        android:id="@+id/switch_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <TextView
                            android:id="@+id/text_phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="0123456789"
                            android:textColor="#000000" />

                        <EditText
                            android:id="@+id/edittext_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="phone"
                            android:text="0123456789"
                            android:paddingTop="0dp"
                            android:textSize="14dp" />

                    </ViewSwitcher>
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/label_my_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="192dp"
                android:text="@string/my_wallet"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_personal_inf" />

            <ImageButton
                android:id="@+id/btn_edit_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFFFF"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:contentDescription="Edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toEndOf="@+id/label_my_wallet"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                app:srcCompat="@drawable/ic_edit_24" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/btn_edit_wallet">
            </androidx.recyclerview.widget.RecyclerView>

            <!--<LinearLayout
                android:layout_width="325dp"
                android:layout_height="71dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:background="@drawable/btn_frame"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_edit_wallet">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/oval_shape"
                    android:backgroundTint="@color/gray_oval"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Wallet"
                        android:textSize="18sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0x5d7676dB6119Ed1F6C6964190..."
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>